# neuq-classroom-query

./: .env.example  .gitignore  CNAME  Cargo.toml  README.md  README.rust.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  theme-guide.html  wrangler.toml
.github/workflows/: classroom-query.yml
assets/blacklist/: blacklist.json
assets/calendar/: neuq_events.json
assets/quotes/: quotes.json
assets/styles/: font.css  main.css  pattern1.css  pattern2.css  pattern3.css  pattern5.css  pattern6.css
assets/template/: template.html  template.tera.html
assets/themes/: ayu.toml  catppuccin.toml  everforest.toml  gruvbox.toml  kanagawa.toml  nord.toml  tokyonight.toml
blacklist/: blacklist.json
calendar/: neuq_events.json
css/: styles.css
functions/: [[path]].js
functions/api/: [[path]].js
output/: classroom_results_1-2.json  classroom_results_1-8.json  classroom_results_11-12.json  classroom_results_3-4.json  classroom_results_5-6.json  classroom_results_7-8.json  classroom_results_9-10.json  processed_classroom_data.json
quotes/: quotes.json
scripts/: fetch_data.js  generate_html.js  process_json.js
src/: client.rs  config.rs  error.rs  fetcher.rs  generator.rs  lib.rs  main.rs  models.rs  processor.rs  theme.rs
style/: index.css  main.css  pattern0.css  pattern1.css  pattern2.css  pattern3.css  pattern4.css  pattern5.css  pattern7.css
template/: template.html
tests/: classroom_query.spec.ts  failed_test.spec.ts
